--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.username=hibte
 spring.datasource.password=hibte
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-#spring.jpa.properties.hibernate.event.merge.entity_copy_observer=allow
+spring.jpa.properties.hibernate.event.merge.entity_copy_observer=allow
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
